--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -8,7 +8,7 @@ server:
 
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
-  type-aliases-package: com.web.springcloud.entities    # 所有Entity别名类所在包
+  type-aliases-package: com.atguigu.springcloud.entities    # 所有Entity别名类所在包
   mapper-locations:
     - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
 
@@ -16,51 +16,42 @@ spring:
   profiles: dev
   application:
     name: microservicecloud-config-dept-client
+
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
-    driver-class-name: com.mysql.jdbc.Driver              # mysql驱动包
-    #    driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
-    url: jdbc:mysql://localhost:3306/clouddb01              # 数据库名称
+    driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
+    url: jdbc:mysql://localhost:3306/cloudDB01?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true&useSSL=false&serverTimezone=UTC              # 数据库名称
     username: root
-    password: 123456
-    initialSize: 5
-    minIdle: 5
-    maxActive: 20
-    maxWait: 60000
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: SELECT 1 FROM DUAL
-    testWhileIdle: true
-    testOnBorrow: true
-    testOnReturn: false
-    poolPreparedStatements: true
-    #配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-    filters: stat,wall,log4j
-    maxPoolPreparedStatementPerConnectionSize: 20
-    useGlobalDataSourceStat: true
-    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+    password: mysql
+
+    dbcp2:
+      min-idle: 5                                           # 数据库连接池的最小维持连接数
+      initial-size: 5                                       # 初始化连接数
+      max-total: 5                                          # 最大连接数
+      max-wait-millis: 200                                  # 等待连接获取的最大超时时间
 
 eureka:
   client: #客户端注册进eureka服务列表内
     service-url:
-      defaultZone: http://localhost:7001/eureka/
+      # defaultZone: http://localhost:7001/eureka   # 单机修改为集群配置
+      defaultZone: http://eureka7001.com:7001/eureka
   instance:
-    instance-id: microservicecloud-dept8001 # 自定义服务实例Id
+    instance-id: microservicecloud-config-dept8001   #自定义服务名称信息
     prefer-ip-address: true     #访问路径可以显示IP地址
 
-# http://192.168.2.100:8001/info优化显示
 info:
-  app.name: web-microservicecloud-config-dept-config01
-  company.name: www.web.com
+  app.name: atguigu-microservicecloud
+  company.name: www.atguigu.com
   build.artifactId: @project.artifactId@
   build.version: @project.version@
+
 ---
 server:
   port: 8001
 
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
-  type-aliases-package: com.web.springcloud.entities    # 所有Entity别名类所在包
+  type-aliases-package: com.atguigu.springcloud.entities    # 所有Entity别名类所在包
   mapper-locations:
     - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
 
@@ -68,41 +59,31 @@ spring:
   profiles: test
   application:
     name: microservicecloud-config-dept-client
+
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
-    driver-class-name: com.mysql.jdbc.Driver              # mysql驱动包
-    #    driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
-    url: jdbc:mysql://localhost:3306/clouddb02              # 数据库名称
+    driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
+    url: jdbc:mysql://localhost:3306/cloudDB02?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true&useSSL=false&serverTimezone=UTC              # 数据库名称
     username: root
-    password: 123456
-    initialSize: 5
-    minIdle: 5
-    maxActive: 20
-    maxWait: 60000
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: SELECT 1 FROM DUAL
-    testWhileIdle: true
-    testOnBorrow: true
-    testOnReturn: false
-    poolPreparedStatements: true
-    #配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-    filters: stat,wall,log4j
-    maxPoolPreparedStatementPerConnectionSize: 20
-    useGlobalDataSourceStat: true
-    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+    password: mysql
+
+    dbcp2:
+      min-idle: 5                                           # 数据库连接池的最小维持连接数
+      initial-size: 5                                       # 初始化连接数
+      max-total: 5                                          # 最大连接数
+      max-wait-millis: 200                                  # 等待连接获取的最大超时时间
 
 eureka:
   client: #客户端注册进eureka服务列表内
     service-url:
-      defaultZone: http://localhost:7001/eureka/
+      # defaultZone: http://localhost:7001/eureka   # 单机修改为集群配置
+      defaultZone: http://eureka7001.com:7001/eureka
   instance:
-    instance-id: microservicecloud-dept8001 # 自定义服务实例Id
+    instance-id: microservicecloud-config-dept8001   #自定义服务名称信息
     prefer-ip-address: true     #访问路径可以显示IP地址
 
-# http://192.168.2.100:8001/info优化显示
 info:
-  app.name: web-microservicecloud-config-dept-config02
-  company.name: www.web.com
+  app.name: atguigu-microservicecloud
+  company.name: www.atguigu.com
   build.artifactId: @project.artifactId@
   build.version: @project.version@
